2012-10-14  Carl Hetherington  <cth@carlh.net>

	* Basic support for DVD subtitles.

	* Re-add DCI naming support.

	* Fix a few bugs.

2012-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 0.55 released.

2012-10-09  Carl Hetherington  <cth@carlh.net>

	* Fix bug possibly causing randomly-occuring
	black thumbnails.

	* Fix problems with obtaining frame rate of
	WMV files (reported by Anders Nordentoft-Madsen).

2012-10-07  Carl Hetherington  <cth@carlh.net>

	* Fix up some bugs when using limited DCP
	range (reported by Wolfgang Woehl).

	* Don't stretch still images for DCPs, just
	scale them up and pad them as required.

2012-10-02  Carl Hetherington  <cth@carlh.net>

	* Version 0.54 released.

2012-10-02  Carl Hetherington  <cth@carlh.net>

	* When encoding 24 frames per second drop
	frame (ie 23.976 frames per second) run the
	video at 24 FPS and resample the audio so
	that when it is run correspondingly (slightly) fast
	it remains in sync.

	* Some code cleanup.

2012-10-01  Carl Hetherington  <cth@carlh.net>

	* Fix aff/666: thumbnail scan is run twice
	when changing the content file for a film.

2012-09-28  Carl Hetherington  <cth@carlh.net>

	* Fix crash bug which seems to have been
	exposed by recent changes to ffmpeg.

2012-09-27  Carl Hetherington  <cth@carlh.net>

	* Version 0.53 released.

2012-09-27  Carl Hetherington  <cth@carlh.net>

	* Fix unrecognised capital letters on
	still-image file extensions.

	* Write hashes of frames to disk and
	check them before making the final DCP.

2012-09-24  Carl Hetherington  <cth@carlh.net>

	* Fix problems with overflow on long films.

2012-09-24  Carl Hetherington  <cth@carlh.net>

	* Version 0.52 released.

2012-09-23  Carl Hetherington  <cth@carlh.net>

	* Fix alignment of frames per second count.

	* Use hopefully more robust networking
	code to survive timeouts during reads and
	writes.

	* Some fixes for bugs when loading Films
	created on Windows in Linux.
