@@ -1,0 +1,39 @@
+/*
+    Copyright (C) 2012 Carl Hetherington <cth@carlh.net>
+
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, write to the Free Software
+    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+
+*/
+
+#ifndef DVDOMATIC_STREAM_H
+#define DVDOMATIC_STREAM_H
+
+struct Stream
+{
+public:
+	Stream (std::string t);
+	
+	Stream (std::string n, int i)
+		: name (n)
+		, id (i)
+	{}
+
+	std::string to_string () const;
+	
+	std::string name;
+	int id;
+};
+
+#endif
