@@ -6,6 +6,9 @@
 
 	* Fix a few bugs.
 
+	* Basic support for selection of audio
+	and subtitle streams.
+
 2012-10-09  Carl Hetherington  <cth@carlh.net>
 
 	* Version 0.55 released.
